# pixel-cipher

./: .gitignore  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml
.github/workflows/: tests.yml
examples/: demo.py
pixel-cipher/: .gitignore
pixel-cipher/.github/workflows/: tests.yml
pixel-cipher/examples/: demo.py
pixel-cipher/src/pixel_cipher/: __init__.py  cli.py
pixel-cipher/tests/: test_cipher.py
src/pixel_cipher/: __init__.py  cipher.py  cli.py
tests/: test_cipher.py
